# streamdeck-kasa

./: Cargo.toml  LICENSE  README.md
com.tr3ysmith.tplinkkasa.sdPlugin/: manifest.json
com.tr3ysmith.tplinkkasa.sdPlugin/pi/: index.html
com.tr3ysmith.tplinkkasa.sdPlugin/pi/css/: sdpi.css
com.tr3ysmith.tplinkkasa.sdPlugin/pi/js/: main.js
com.tr3ysmith.tplinkkasa.sdPlugin/plugin/: streamdeck-kasa
src/: main.rs
src/elgato/: commands.rs  events.rs  info.rs  mod.rs
src/kasa/: mod.rs
