[package]
name = "streamdeck-kasa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0.86"
anyhow = "1.0.68"
soketto = "0.7.1"
tokio-util = { version = "0.7.4", features = ["net", "compat"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tracing-appender = "0.2.2"
tracing-unwrap = "0.10.0"
serde_repr = "0.1.10"
